[gd_scene load_steps=39 format=3 uid="uid://cg3bhudehfnxm"]

[ext_resource type="Script" path="res://scripts/character.gd" id="1_ciblw"]
[ext_resource type="Texture2D" uid="uid://txso5idsc1ow" path="res://character/Appearing (96x96).png" id="2_bltcb"]
[ext_resource type="Texture2D" uid="uid://c3bjgs6bpc6os" path="res://character/Hit (32x32).png" id="2_lpdc4"]
[ext_resource type="Texture2D" uid="uid://bi4ru58tfqso7" path="res://character/Idle_32x32_purple.png" id="3_ppq1y"]
[ext_resource type="Texture2D" uid="uid://rko1x5ofnp1j" path="res://character/Fall_32x32_purple.png" id="4_s3uo5"]
[ext_resource type="Texture2D" uid="uid://c4x63mi7o2lfr" path="res://character/Jump_32x32_purple.png" id="5_mydf0"]
[ext_resource type="Texture2D" uid="uid://cxbja306rf6uo" path="res://character/Run_32x32_purple.png" id="6_ldry1"]
[ext_resource type="Texture2D" uid="uid://dh6vsosw5dsgn" path="res://character/Wall_Jump_32x32_purple.png" id="8_04i1r"]
[ext_resource type="AudioStream" uid="uid://ipmlg4mo7ou4" path="res://audio/SFX/jump_3.wav" id="9_ethho"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5auph"]
atlas = ExtResource("2_bltcb")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar2yb"]
atlas = ExtResource("2_bltcb")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxqhr"]
atlas = ExtResource("2_lpdc4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgshx"]
atlas = ExtResource("3_ppq1y")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6f16"]
atlas = ExtResource("3_ppq1y")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntxdl"]
atlas = ExtResource("3_ppq1y")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6qor"]
atlas = ExtResource("3_ppq1y")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m40ss"]
atlas = ExtResource("3_ppq1y")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4t0j"]
atlas = ExtResource("3_ppq1y")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bketc"]
atlas = ExtResource("3_ppq1y")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_byyay"]
atlas = ExtResource("3_ppq1y")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtxcp"]
atlas = ExtResource("3_ppq1y")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bg1kn"]
atlas = ExtResource("3_ppq1y")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_57hr4"]
atlas = ExtResource("3_ppq1y")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpida"]
atlas = ExtResource("6_ldry1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xeeiu"]
atlas = ExtResource("6_ldry1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwqyf"]
atlas = ExtResource("6_ldry1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgtsm"]
atlas = ExtResource("6_ldry1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lao2f"]
atlas = ExtResource("6_ldry1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jik4"]
atlas = ExtResource("6_ldry1")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vptx"]
atlas = ExtResource("6_ldry1")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3fc7"]
atlas = ExtResource("6_ldry1")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c705"]
atlas = ExtResource("6_ldry1")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn8rm"]
atlas = ExtResource("6_ldry1")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8ubg"]
atlas = ExtResource("6_ldry1")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpf4i"]
atlas = ExtResource("6_ldry1")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aptfx"]
atlas = ExtResource("8_04i1r")
region = Rect2(62, 0, 31, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mb6hq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5auph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar2yb")
}],
"loop": true,
"name": &"damage",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxqhr")
}],
"loop": true,
"name": &"dash",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgshx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6f16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntxdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6qor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m40ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4t0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bketc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byyay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtxcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bg1kn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57hr4")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_s3uo5")
}],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_mydf0")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpida")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xeeiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwqyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgtsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lao2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jik4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vptx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3fc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c705")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn8rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8ubg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpf4i")
}],
"loop": true,
"name": &"running",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aptfx")
}],
"loop": true,
"name": &"wall_slide",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h50kp"]
radius = 40.0
height = 92.0

[node name="Character" type="CharacterBody2D"]
texture_filter = 1
scale = Vector2(0.5, 0.5)
collision_layer = 3
script = ExtResource("1_ciblw")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(112, 422)
scale = Vector2(3.28125, 3.15625)
sprite_frames = SubResource("SpriteFrames_mb6hq")
autoplay = "default"
frame_progress = 0.624521

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(112, 426)
shape = SubResource("CapsuleShape2D_h50kp")

[node name="Timers" type="Node" parent="."]

[node name="dash_timer" type="Timer" parent="Timers"]
wait_time = 0.2

[node name="dash_again_timer" type="Timer" parent="Timers"]

[node name="djump" type="Timer" parent="Timers"]

[node name="hit_timer" type="Timer" parent="Timers"]
wait_time = 0.3

[node name="SFX_jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ethho")
volume_db = -20.0

[connection signal="timeout" from="Timers/dash_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timers/dash_again_timer" to="." method="_on_dash_again_timer_timeout"]
[connection signal="timeout" from="Timers/djump" to="." method="_on_djump_timeout"]
[connection signal="timeout" from="Timers/hit_timer" to="." method="_on_hit_timer_timeout"]
